WU: implementazione dell'autocompletamento degli indirizzi completata ma da migliorare il codice

--- a/resources/css/index.css
+++ b/resources/css/index.css
@@ -34,8 +34,11 @@
     max-height: calc(5 * 48px);
     overflow-y: auto;
     box-shadow: 0 2px 8px rgba(0,0,0,0.08);
-    display: none;
     z-index: 1000;
+}
+
+.not-visible {
+    display: none;
 }
 
 .suggestions-dropdown.active {
